--- a/src/styles.css
+++ b/src/styles.css
@@ -4,86 +4,36 @@
 @tailwind utilities;
 
 /* You can add global styles to this file, and also import other style files */
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #646cff;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-.card {
-  padding: 2em;
-}
-
-.logo {
-  @apply box-content;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@layer base {
+  html,
+  body {
+    height: 100%;
+    scroll-behavior: smooth;
   }
-
-  a:hover {
-    color: #747bff;
+  body {
+    margin: 0;
+    font-family: "Poppins", sans-serif;
   }
-
-  button {
-    background-color: #f9f9f9;
+  * {
+    box-sizing: border-box;
+  }
+}
+@layer components {
+  h1 {
+    @apply text-xl font-bold text-white pt-4 pb-4;
+  }
+  h2 {
+    @apply text-base font-bold text-white;
+  }
+  p {
+    @apply text-sm text-lighttext leading-6;
+  }
+  @media screen and (min-width: 1024px) {
+    h1 {
+      @apply text-3xl;
+    }
+    p {
+      @apply text-base text-lighttext leading-7;
+    }
   }
 }
