--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,7 @@
 }
 @layer components {
   h1 {
-    @apply text-xl font-bold text-white pt-4 pb-4;
+    @apply text-2xl font-bold text-white pt-4 pb-4;
   }
   h2 {
     @apply text-base font-bold text-white;
