--- a/src/styles.css
+++ b/src/styles.css
@@ -23,10 +23,16 @@
     @apply text-2xl font-bold text-white pt-4 pb-4;
   }
   h2 {
-    @apply text-base font-bold text-white;
+    @apply text-base font-bold text-white pt-4 pb-4;
   }
   p {
-    @apply text-sm text-lighttext leading-6;
+    @apply text-sm text-lighttext leading-6 pb-4;
+  }
+  pre {
+    @apply text-sm text-lighttext leading-6 p-4 overflow-auto;
+  }
+  a:hover {
+    @apply text-softPink;
   }
   @media screen and (min-width: 1024px) {
     h1 {
